@@ -413,8 +413,13 @@ update_themes_from_disk (GladeXML *dialog)
   current_icon_theme = gconf_client_get_string (client, ICON_THEME_KEY, NULL);
   window_manager = gnome_wm_manager_get_current (gdk_display_get_default_screen (gdk_display_get_default ()));
   wm_settings.flags = GNOME_WM_SETTING_THEME;
-  gnome_window_manager_get_settings (window_manager, &wm_settings);
-  current_window_theme = g_strdup (wm_settings.theme);
+
+  if (window_manager != NULL) {
+    gnome_window_manager_get_settings (window_manager, &wm_settings);
+    current_window_theme = g_strdup (wm_settings.theme);
+  } else {
+    current_window_theme = NULL;
+  }
 
   /* FIXME: What do we really do when there is no theme?  Ask Havoc here. */
   /* BROKEN BROKEN BROKEN */
