@@ -1,3 +1,9 @@
+2002-12-28  Seth Nickell  <snickell@stanford.edu>
+
+	* gnome-theme-manager.c: (update_themes_from_disk):
+
+	Fix crash when current WM isn't detected.
+
 2002-12-18  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.5
